#bin_PROGRAMS = fptest

#fptest_SOURCES = \
#	main.cpp \
#	source/binary_operators.cpp \
#	source/fp_scalar.cpp \
#	source/fp_vector.cpp \
#	source/function_compiler.cpp \
#	source/function_node.cpp \
#	source/function_parser.cpp \
#	source/typed_value.cpp \
#	source/unary_functions.cpp \
#	source/variant.cpp


#fptest_LDADD = \
#	-ldl


#AM_CPPFLAGS = \
#	-I$(top_srcdir)/basic/head \
#	-I$(top_srcdir)/function_parser/head \
#	-I$(top_srcdir)/geometry/head


SUBDIRS = \
	head \
	source
