
include_HEADERS = \
	connector_basic.h \
	f_angular.h \
	f_curvature.h \
	f_centrifugal.h \
	f_coriolis.h \
	f_dpd.h \
	f_dpde.h \
	f_generic.h \
	f_kinetic.h \
	f_mdpd.h \
	f_pair.h \
	f_pair_arbitrary.h \
	f_pair_arbitrary_BC.h \
	f_pair_arbitrary_wf.h \
	f_pair_scalar.h \
	f_pair_tensor.h \
	f_pair_vector.h \
	f_pair_vels.h \
	f_pair_vels_BC.h \
	f_pair_vels_wf.h \
	f_pair_wf.h \
	f_particle.h \
	f_particle_vector.h \
	f_particle_vector_matrix.h \
	f_particle_vector_rand_matrix.h \
	f_particle_vels.h \
	f_particle_vels_matrix.h \
	f_particle_scalar.h \
        f_particle_tensor.h \
	f_rand.h \
	f_rand_var_noise.h \
	f_specific.h\
	f_wall_dpd.h \
	f_wall_repulsion.h \
	f_with_rng.h \
	gen_connector.h \
	gen_f_solo.h \
	gen_triplet.h \
	gen_quintet.h \
	ie_heat_conduction.h \
	ie_wall_heat_conduction.h \
	lennard_jones.h \
	lennard_jones_vc.h
