
noinst_LTLIBRARIES = libfunction_parser.la

libfunction_parser_la_SOURCES = \
	binary_operators.cpp \
	fp_scalar.cpp \
	fp_tensor.cpp \
	fp_vector.cpp \
	function_compiler.cpp \
	function_node.cpp \
	function_parser.cpp \
	typed_value.cpp \
	unary_functions.cpp \
        unary_operators.cpp \
	variant.cpp


AM_CPPFLAGS = \
	-I$(top_srcdir)/src/basic/head \
	-I$(top_srcdir)/src/function_parser/head \
	-I$(top_srcdir)/src/geometry/head


